--- a/research/src/recommender/component/app/web/templates/header.html
+++ b/research/src/recommender/component/app/web/templates/header.html
@@ -18,6 +18,9 @@
                     <a href="{{ url_for('index') }}"><span class="octicon octicon-home"></span> Domů</a>
                 </li>
                 <li>
+                    <a href="{{ url_for('search') }}"><span class="octicon octicon-search"></span> Hledat</a>
+                </li>
+                <li>
                     <a href="{{ url_for('profil') }}"><span class="octicon octicon-person"></span> Profil</a>
                 </li>
             </ul>
