--- a/research/src/recommender/component/app/web/templates/search_result.html
+++ b/research/src/recommender/component/app/web/templates/search_result.html
@@ -3,6 +3,7 @@
 <div class="jumbotron" id="landing-info">
     <h1>Výsledek hledání</h1>
     <hr>
+    {% include "flash_message.html" %}
 
     <div>
         {% include "contract_list.html" %}
