--- a/research/src/recommender/component/app/web/templates/_helpers.html
+++ b/research/src/recommender/component/app/web/templates/_helpers.html
@@ -10,3 +10,10 @@
     {% endif %}
     </dd>
 {% endmacro %}
+
+{% macro render_contracts(contracts, panel_class) %}
+    {% for contract in contracts %}
+        {% include "contract_item.html" %}
+    {% endfor %}
+{% endmacro %}
+
