--- a/research/src/recommender/component/app/web/templates/profile.html
+++ b/research/src/recommender/component/app/web/templates/profile.html
@@ -4,17 +4,15 @@
     <h1>Profil</h1>
     <hr>
     {% include "flash_message.html" %}
-
+    ID: {{ user_profile.id }}<br>
 
     {% from "_helpers.html" import render_field %}
     <form method="post">
-      <dl>
-        {{ render_field(form.select) }}
-        <p>
-        {{ render_field(form.search) }}
-      </p></dl>
-      <p><input type="submit" value="Uložit">
-    </p></form>
+        {{ render_field(form.locality) }}
+        ({{ user_profile.locality.gps[0] }}, {{ user_profile.locality.gps[1] }})
+        {{ render_field(form.interest_items) }}
+        <input type="submit" value="Uložit">
+    </form>
 
 </div>
 {% endblock %}
