user profile automatic update

--- a/research/src/recommender/component/app/web/templates/profile.html
+++ b/research/src/recommender/component/app/web/templates/profile.html
@@ -11,6 +11,7 @@
         {{ render_field(form.locality) }}
         ({{ user_profile.locality.gps[0] }}, {{ user_profile.locality.gps[1] }})
         {{ render_field(form.interest_items) }}
+        {{ render_field(form.cached_items) }}
         <input type="submit" value="Uložit">
     </form>
 
